<resources>
    <string name="app_name">KuDaur</string>
    <string name="register">DAFTAR</string>
    <string name="login">MASUK</string>
    <string name="kudaur">KuDaur</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="type_email">ketikkan email</string>
    <string name="type_password">ketikkan password</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="type_nama">ketikkan nama lengkap</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="_login">Masuk</string>
    <string name="invalid_password">Password minimal harus 6 karakter</string>
    <string name="brand_logo">brand logo</string>
    <string name="title_home">Beranda</string>
    <string name="trash_photo_shoot">Foto Sampah</string>
    <string name="trash_bag">Kantong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kelola_sampah">Kelola Sampah</string>
    <string name="_trash_bag">Kantong Sampah</string>
    <string name="empty_email">Masukkan email</string>
    <string name="empty_password">Masukkan password</string>
    <string name="profile">Profil</string>
    <string name="kelola_sampahmu">Kelola Sampahmu!</string>
    <string name="trash_image">Foto sampah</string>
    <string name="daftar_sampah">Daftar Sampah</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="description">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="type_result">Logam</string>
    <string name="type_of_trash">Jenis sampah:</string>
    <string name="add_to_trash_bag">Masukkan kantong sampah</string>
    <string name="choose_a_picture">Pilih foto</string>
</resources>